# isocomp

./: .dockerignore  .flake8  .gitignore  CHANGELOG  CITATIONS.md  Dockerfile  README.md  algorithm_description.md  mkdocs.yml  pyproject.toml
.devcontainer/: .dockerignore  Dockerfile  devcontainer.json
.github/workflows/: isocomp.yaml  python-package.yml
data/: data.html  data.md
docs/: IsoformLibrary.ipynb  RNAxSV-workflow.pptx  install.md  scripts.md  unique_isoform_file_spec.md  workflow.md
docs/algorithm_overview/: algorithm_description.md
docs/analysis/: plot_isoforms.ipynb
docs/api/: api_tutorial.ipynb
docs/cmd_line/: cmd_line_usage.md
docs/file_specs/: isoform_diversity_summary_file_spec.md  variant_file_spec.md
docs/other_software_summaries/: tofu_fusion_genes.md
isocomp/: pyproject.toml
isocomp/isocomp/: create_windows.py
isocomp/tests/: test_isocomp.py
notebooks/: isoform_edit_distance_distribution.ipynb  plot_isoforms.ipynb
scripts/: 4_create_windows.md  4_create_windows_yq.py  add_scripts.md  call_variants.md  call_variants.py  call_variants_input.tsv  call_variants_output.tsv  coverage_stats.md  coverage_stats.py  create_tx_start_stop_bed.R  create_windows.py  filter.md  filter.py  find_unique_isoform.md  find_unique_isoform.py  multibedintersect.py  rename_fasta.py  step0_align_to_genome.sh  step0_rename_fasta_desc.py  trim_indel_ends.md  trim_indel_ends.py  tutorials.md
src/isocomp/: __init__.py  __main__.py  create_windows.py  rename_fasta.py
src/isocomp/Compare/: IsoformLibrary.py  __init__.py  align_isoforms.py  compare_isoforms_in_cluster.py  filter_comparisons.py  find_unique_isoforms.py  new_compare_isoform.py  utils.py  vector_crosser.py
src/isocomp/Coordinates/: Window.py  __init__.py  create_comparison_windows.py  parse_bed_intersect.py  update_source.py  utils.py
src/isocomp/utils/: __init__.py  configure_logging.py  fasta_to_fastq.py
src/tests/: conftest.py  test_compare.py  test_coordinates.py  test_isocomp.py
src/tests/data/: clustered_regions.gtf  fasta_map.csv  hg002_classification.txt  hg002_sqanti_fltr.fasta  hg002_sqanti_fltr.fasta.fai  hg002_sqanti_fltr.gtf  hg004_classification.txt  hg004_sqanti_fltr.fasta  hg004_sqanti_fltr.fasta.fai  hg004_sqanti_fltr.gtf  hg005_classification.txt  hg005_sqanti_fltr.fasta  hg005_sqanti_fltr.fasta.fai  (+2 more)
(+8 files in other folders)
