[tool.poetry]
name = "isocomp"
version = "0.2.2"
description = ""
authors = ["Yutong Qiu <yutongq@andrew.cmu.edu>", "Chia Sin Liew <chiasin.liew@unl.edu>", "Rupesh Kesharwani <rupesh.kesharwani@bcm.edu>", 
           "Bida Gu <bidagu@usc.edu>", "chase mateusiak <chase.mateusiak@gmail.com>", 
		   "Muhammad Sohail Raza <sohail@big.ac.cn>", "Evan Biederstedt <evan_biederstedt@hms.harvard.edu>" ]
exclude = ['Dockerfile', '*temp_*','docs', 'site', 'src/isocomp/tests', '.git','.venv','.github', 'dist', 'data', 'scripts', 'FinalPresentation_BCM_Hackathon_12Oct2022.pdf']

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
pyranges = "^0.0.120"
pysam = "^0.20.0"
edlib = "^1.3.9"
numpy = "1.23"
biopython = "^1.80"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mkdocs = "^1.4.1"
mkdocs-autorefs = "^0.4.1"
mkdocs-section-index = "^0.3.4"
mkdocstrings = {extras = ["python"], version = "^0.19.0"}
mkdocs-jupyter = "^0.22.0"
ipykernel = "^6.16.2"

[tool.poetry.scripts]
isocomp = "isocomp:__main__.main"

[tool.poetry.group.dev.dependencies]
matplotlib = "^3.7.1"
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
